add skip & take getAll User API
