# controllers/api/users/index.js
@@ -3,7 +3,19 @@ const { verifyJWT } = require('../../../middleware/authJwt')
 
 const getMany = async (req, res, next) => {
     try {
-        const result = await User.findMany()
+        let { skip, take } = req.query
+        if (!skip) skip = 0
+        if (!take) take = 100
+
+        skip = parseInt(skip)
+        take = parseInt(take)
+
+        if (take > 100) take = 100
+        let option = {}
+        option.skip = skip
+        option.take = take
+        
+        const result = await User.findMany(option)
         req.result = result
         next()
     } catch (err) {
